--- a/my website.html
+++ b/my website.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+    <script src="//code.tidio.co/qycslzbpfz0fesasjscudejhjf6ayxas.js" async></script>
+
 
 </head>
 <body>
@@ -20,7 +22,7 @@
       <a href="https://ab-website.ahmadbulbul.repl.co/" class="mr-5 hover:text-gray-900">Fourth</a>
     </nav>
     <a herf="mailto:Ahmadbulbulprof1@gmail.com">
-    <button  class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0">Ping me
+      <a href="mailto:Ahmadbulbulprof1@gmail.com" class="mr-5 hover:text-gray-900">Gmail</a>
       <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
         <path d="M5 12h14M12 5l7 7-7 7"></path>
       </svg>
@@ -148,7 +150,7 @@
           </div>
         </div>
         <div class="p-2 w-full">
-          <button class="flex mx-auto text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg">Send</button>
+            <a href="mailto:Ahmadbulbulprof1@gmail.com" class="flex mx-auto text-white bg-indigo-500 border-0 py-2 px-8 focus:outline-none hover:bg-indigo-600 rounded text-lg">Send</a>
         </div>
         <div class="p-2 w-full pt-8 mt-8 border-t border-gray-200 text-center">
           <a herf="mailto:Ahmadbulbulprof1@gmail.com" class="text-indigo-500">Ahmadbulbulprof1@gmail.com</a>
